fix: z-index 영역 오류 수정, arrowUp버튼 개선

--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,7 @@ button:focus {
   text-align: center;
   box-shadow: 5px 5px 0px 0px var(--color-accent);
   transition: opacity 300ms ease-in;
+  z-index: 1;
 }
 
 #contact {
